Add homepage text-based content.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 ---
 layout: default
 ---
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 
-  <h2>Main Page</h2>
+  <h2>Hi, I'm Sam!</h2>
 
-  Main content goes here. 
+  <p>I am a computer science graduate, a full time software developer and
+  extremely passionate about volunteering and helping young students
+  to establish and achieve their goals.</p>
+
+  <p>Right now I help make awesome technical solutions at Black Pepper
+  Software. Further to that I am enjoying living life to the fullest by
+  going out, enjoying my free time, and helping out in my local area.</p>
+
+  <p>Starting work and standing on my own two feet, I realised there is
+  still much I have to learn, and this is the place I'll be making my
+  (infrequent) posts about learning experiences I have found valuable.
+  I hope that these unstructured ramblings might help others that find
+  themselves in a similar position to myself.</p>
+
